src/objects/TrackWise__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TrackWise</relationshipLabel>
        <relationshipName>TrackWise</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article #</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>TrackWise</relationshipLabel>
        <relationshipName>TrackWise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Opened__c</fullName>
        <description>To determine if the case is open or closed</description>
        <formula>If ( ISBLANK(Date_Closed__c), &quot;Open&quot;,&quot;Closed&quot;)</formula>
        <label>Closed/Opened?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Date Created</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Complaint_Code__c</fullName>
        <label>Customer Complaint Code</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Alleged_Event__c</fullName>
        <label>Description of Alleged Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <formula>Account__r.Movex__c</formula>
        <label>ERP #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Location__c</fullName>
        <label>Investigation Location</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Action_intended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legal Action intended</description>
        <label>Legal Action intended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movex__c</fullName>
        <description>Customer.Unique Identifier</description>
        <label>Movex #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Account__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_ID__c</fullName>
        <description>Not allowed to be visible for users, to protect data protection law.</description>
        <externalId>true</externalId>
        <label>TrackWise Id (PR ID)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Group_3__c</fullName>
        <formula>IF(CONTAINS(Article__r.RecordType.DeveloperName, &quot;Local&quot;), 
Article__r.GlobalSKUMapping__r.PG3_Code__c + &quot; &quot; + Article__r.GlobalSKUMapping__r.PG3_Desc__c, 
Article__r.PG3_Code__c + &quot; &quot; + Article__r.PG3_Desc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Brand field from Products to be able to use to filter Views list</description>
        <formula>Article__r.Brand__c</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Received_Date__c</fullName>
        <label>Product Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Notes_Action_Taken__c</fullName>
        <label>Repair Notes/Action Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TrackWise</label>
    <listViews>
        <fullName>AT_Open_Cases</fullName>
        <columns>NAME</columns>
        <columns>PR_ID__c</columns>
        <columns>Account__c</columns>
        <columns>ERP__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ERP__c</field>
            <operation>startsWith</operation>
            <value>AT</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>AT: Open Cases</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PR_ID__c</columns>
        <columns>Customer_Complaint_Code__c</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Article__c</columns>
        <columns>Investigation_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Complaints</label>
    </listViews>
    <listViews>
        <fullName>Closed_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Article__c</columns>
        <columns>Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>Customer_Complaint_Code__c</columns>
        <columns>Investigation_Location__c</columns>
        <columns>PR_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Closed__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Closed Complaints</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_Closed_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Article__c</columns>
        <columns>Product_Received_Date__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>Closed_Opened__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Movex__c</field>
            <operation>startsWith</operation>
            <value>JP</value>
        </filters>
        <filters>
            <field>Closed_Opened__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>JP Closed Complaints</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinates>JP_Managing_Director1</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Customer</fullName>
        <columns>NAME</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Article__c</columns>
        <columns>Product_Received_Date__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>Closed_Opened__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Movex__c</field>
            <operation>startsWith</operation>
            <value>JP</value>
        </filters>
        <label>JP Customer</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinates>JP_Managing_Director1</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Open_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Article__c</columns>
        <columns>Product_Received_Date__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>Closed_Opened__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Movex__c</field>
            <operation>startsWith</operation>
            <value>JP</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
        </filters>
        <label>JP Open Complaints</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinates>JP_Managing_Director1</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Article__c</columns>
        <columns>Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Customer_Complaint_Code__c</columns>
        <columns>Investigation_Location__c</columns>
        <columns>PR_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open Complaints</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_SIMPLANT_Complaints</fullName>
        <columns>NAME</columns>
        <columns>PR_ID__c</columns>
        <columns>Customer_Complaint_Code__c</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Article__c</columns>
        <columns>Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Product_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Investigation_Location__c</field>
            <operation>contains</operation>
            <value>leuven</value>
        </filters>
        <filters>
            <field>Closed_Opened__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open SIMPLANT Complaints</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>POLSKA</fullName>
        <columns>Account_Owner__c</columns>
        <columns>Movex__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>PR_ID__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>Closed_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Movex__c</field>
            <operation>startsWith</operation>
            <value>PL</value>
        </filters>
        <label>POLSKA</label>
        <language>pl</language>
    </listViews>
    <listViews>
        <fullName>SIMPLANT_Complaints</fullName>
        <columns>NAME</columns>
        <columns>PR_ID__c</columns>
        <columns>Customer_Complaint_Code__c</columns>
        <columns>Movex__c</columns>
        <columns>Account__c</columns>
        <columns>Article__c</columns>
        <columns>Investigation_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Closed_Opened__c</columns>
        <columns>Product_Received_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Investigation_Location__c</field>
            <operation>contains</operation>
            <value>leuven</value>
        </filters>
        <label>SIMPLANT Complaints</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrackWise</pluralLabel>
    <recordTypes>
        <fullName>Trackwise_Complaints</fullName>
        <active>true</active>
        <label>Trackwise Complaints</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>